VQ-2857-n-VQ-2659:: Lead Display n Lead Create

--- a/src/app/features/entities/components/entity/new-entity/new-entity.component.html
+++ b/src/app/features/entities/components/entity/new-entity/new-entity.component.html
@@ -65,7 +65,8 @@
                 }}</label>
                 <p-dropdown
                   [options]="roleType"
-                  [(ngModel)]="selectedItem"
+                  [(ngModel)]="selectedRole"
+                  (onChange)="onRoleSelect($event)"
                   optionLabel="partyTypeName"
                   optionValue="id"
                   formControlName="assign_role"
