--- a/src/app/features/reports-v2/report-management/report-management.component.html
+++ b/src/app/features/reports-v2/report-management/report-management.component.html
@@ -1,193 +1,230 @@
 <div class="p-3">
-    <div class="card p-3">
-
-        <div class="preloader" *ngIf="!shouldShowTable">
-            <p-progressSpinner
-                styleClass="w-0.5em h-0.5em "
-                strokeWidth="3"
-                fill="var(--surface-ground)"
-                animationDuration=".6s"
-            ></p-progressSpinner>
-        </div>
-        <div class="mt-5" *ngIf="shouldShowTable">
-            <p-table
-                [value]="reports.content"
-                [tableStyle]="{ 'min-width': '50rem' }"
-                [paginator]="true"
-                [rows]="rows"
-                [totalRecords]="reports.totalElements"
-                currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
-                (onPage)="pageChange($event)"
-                [showCurrentPageReport]="true"
-                [globalFilterFields]=globalFilterFields
-            >
-                <ng-template pTemplate="header">
-                    <tr>
-                        <!-- <th>ID</th> -->
-                        <th pSortableColumn="name">
-                          {{ 'report.name' | translate }}
-                          <p-sortIcon field="name"></p-sortIcon>
-                        </th>
-                        <th pSortableColumn="createdBy">
-                          {{ 'report.created_by' | translate }}
-                          <p-sortIcon field="createdBy"></p-sortIcon>
-                        </th>
-                        <th>{{ 'report.category' | translate }}</th>
-                        <th pSortableColumn="createdDate">
-                          {{ 'report.date_created' | translate }}
-                          <p-sortIcon field="createdDate"></p-sortIcon>
-                        </th>
-                        <th pSortableColumn="dashboardId">
-                          {{ 'report.dashboard' | translate }}
-                          <p-sortIcon field="dashboardId"></p-sortIcon>
-                        </th>
-                        <th class="text-center">{{ 'report.action' | translate }}</th>
-                    </tr>
-                </ng-template>
-                <ng-template pTemplate="body" let-report>
-                    <tr>
-                        <!-- <td>{{ report.id }}</td> -->
-                        <td>{{ report.name }}</td>
-                        <td>
-                            <!-- <ng-container *ngIf="getUserName(report.createdBy) | async as user">
-                                {{ user?.name }}
-                            </ng-container> -->
-                            {{ report.createdBy }}
-                        </td>
-                        <td>
-                            <div class="btn-group dropend">
-                                <a class="btn btn-link text-secondary" data-bs-toggle="dropdown" aria-expanded="false">
-                                    {{ getFolderCategoryName(report.folder) }}
-                                </a>
-                                <ul class="dropdown-menu">
-                                  <li class="reAssignReport" (click)="reAssignReportFolder('M', report)">
-                                    {{ 'report.my_reports' | translate }}
-                                    <span *ngIf="report.folder==='M'" class="float-end">
-                                        <i class="pi pi-check"></i>
-                                    </span>
-                                </li>
-                                  <li class="reAssignReport" (click)="reAssignReportFolder('S', report)">
-                                    {{ 'report.shared_reports' | translate }}
-                                    <span *ngIf="report.folder==='S'" class="float-end">
-                                        <i class="pi pi-check"></i>
-                                    </span>
-                                </li>
-                                </ul>
-                            </div>
-                        </td>
-                        <td>{{ report.createdDate | date }}</td>
-                        <td>
-                            <div class="btn-group dropend">
-                                <a class="btn btn-link text-secondary text-start" data-bs-toggle="dropdown" aria-expanded="false">
-                                    {{ getDashboardName(report.dashboardId) }}
-                                </a>
-                                <ul class="dropdown-menu">
-                                  <li
-                                    *ngFor="let dashboad of dashboards"
-                                    class="reAssignReportDashboard"
-                                    (click)="reAssignReportDashboard(dashboad.id, report)"
-                                  >
-                                    {{ dashboad?.name }}
-                                    <span *ngIf="getDashboardName(report.dashboardId) === dashboad.name" class="float-end">
-                                        <i class="pi pi-check"></i>
-                                    </span>
-                                </li>
-                                </ul>
-                            </div>
-                        </td>
-                        <td class="text-center">
-                            <div class="btn-group dropend">
-                                <a class="btn btn-link text-secondary" data-bs-toggle="dropdown" aria-expanded="false">
-                                    <i class="pi pi-ellipsis-v"></i>
-                                </a>
-                                <ul class="dropdown-menu">
-                                    <li (click)="gotoEditReport(report)">
-                                        {{ 'report.edit' | translate }}
-                                    </li>
-                                    <li
-                                        data-bs-toggle="modal"
-                                        data-bs-target="#saveReportModal"
-                                        id="selectReport"
-                                        (click)="selectReport(report)"
-                                    >
-                                    {{ 'report.rename' | translate }}
-                                    </li>
-                                    <li data-bs-toggle="modal" data-bs-target="#shareModal">
-                                        {{ 'report.share' | translate }}
-                                    </li>
-                                    <li data-bs-toggle="modal" data-bs-target="#downloadModal">
-                                        {{ 'report.download' | translate }}
-                                    </li>
-                                    <li
-                                        data-bs-toggle="modal"
-                                        data-bs-target="#deleteReportModal"
-                                        (click)="selectReport(report)"
-                                    >
-                                    {{ 'report.delete' | translate }}
-                                    </li>
-                                </ul>
-                            </div>
-                        </td>
-                    </tr>
-                </ng-template>
-            </p-table>
-        </div>
-
+  <div class="card p-3">
+    <div class="preloader" *ngIf="!shouldShowTable">
+      <p-progressSpinner
+        styleClass="w-0.5em h-0.5em "
+        strokeWidth="3"
+        fill="var(--surface-ground)"
+        animationDuration=".6s"
+      ></p-progressSpinner>
     </div>
-
+    <div class="mt-5" *ngIf="shouldShowTable">
+      <p-table
+        [value]="reports.content"
+        [tableStyle]="{ 'min-width': '50rem' }"
+        [paginator]="true"
+        [rows]="rows"
+        [totalRecords]="reports.totalElements"
+        currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
+        (onPage)="pageChange($event)"
+        [showCurrentPageReport]="true"
+        [globalFilterFields]="globalFilterFields"
+      >
+        <ng-template pTemplate="header">
+          <tr>
+            <th pSortableColumn="name">
+              {{ "report.name" | translate }}
+              <p-sortIcon field="name"></p-sortIcon>
+            </th>
+            <th pSortableColumn="createdBy">
+              {{ "report.created_by" | translate }}
+              <p-sortIcon field="createdBy"></p-sortIcon>
+            </th>
+            <th>{{ "report.category" | translate }}</th>
+            <th pSortableColumn="createdDate">
+              {{ "report.date_created" | translate }}
+              <p-sortIcon field="createdDate"></p-sortIcon>
+            </th>
+            <th pSortableColumn="dashboardId">
+              {{ "report.dashboard" | translate }}
+              <p-sortIcon field="dashboardId"></p-sortIcon>
+            </th>
+            <th class="text-center">{{ "report.action" | translate }}</th>
+          </tr>
+        </ng-template>
+        <ng-template pTemplate="body" let-report>
+          <tr>
+            <td>{{ report.name }}</td>
+            <td>
+              {{ report?.user.name }}
+            </td>
+            <td>
+              <div class="btn-group dropend">
+                <a
+                  class="btn btn-link text-secondary"
+                  data-bs-toggle="dropdown"
+                  aria-expanded="false"
+                >
+                  {{ getFolderCategoryName(report.folder) }}
+                </a>
+                <ul class="dropdown-menu">
+                  <li
+                    class="reAssignReport"
+                    (click)="reAssignReportFolder('M', report)"
+                  >
+                    {{ "report.my_reports" | translate }}
+                    <span *ngIf="report.folder === 'M'" class="float-end">
+                      <i class="pi pi-check"></i>
+                    </span>
+                  </li>
+                  <li
+                    class="reAssignReport"
+                    (click)="reAssignReportFolder('S', report)"
+                  >
+                    {{ "report.shared_reports" | translate }}
+                    <span *ngIf="report.folder === 'S'" class="float-end">
+                      <i class="pi pi-check"></i>
+                    </span>
+                  </li>
+                </ul>
+              </div>
+            </td>
+            <td>{{ report.createdDate | date }}</td>
+            <td>
+              <div class="btn-group dropend">
+                <a
+                  class="btn btn-link text-secondary text-start"
+                  data-bs-toggle="dropdown"
+                  aria-expanded="false"
+                >
+                  {{ getDashboardName(report.dashboardId) }}
+                </a>
+                <ul class="dropdown-menu">
+                  <li
+                    *ngFor="let dashboad of dashboards"
+                    class="reAssignReportDashboard"
+                    (click)="reAssignReportDashboard(dashboad.id, report)"
+                  >
+                    {{ dashboad?.name }}
+                    <span
+                      *ngIf="
+                        getDashboardName(report.dashboardId) === dashboad.name
+                      "
+                      class="float-end"
+                    >
+                      <i class="pi pi-check"></i>
+                    </span>
+                  </li>
+                </ul>
+              </div>
+            </td>
+            <td class="text-center">
+              <div class="btn-group dropend">
+                <a
+                  class="btn btn-link text-secondary"
+                  data-bs-toggle="dropdown"
+                  aria-expanded="false"
+                >
+                  <i class="pi pi-ellipsis-v"></i>
+                </a>
+                <ul class="dropdown-menu">
+                  <li (click)="gotoEditReport(report)">
+                    {{ "report.edit" | translate }}
+                  </li>
+                  <li
+                    data-bs-toggle="modal"
+                    data-bs-target="#saveReportModal"
+                    id="selectReport"
+                    (click)="selectReport(report)"
+                  >
+                    {{ "report.rename" | translate }}
+                  </li>
+                  <li data-bs-toggle="modal" data-bs-target="#shareModal">
+                    {{ "report.share" | translate }}
+                  </li>
+                  <li data-bs-toggle="modal" data-bs-target="#downloadModal">
+                    {{ "report.download" | translate }}
+                  </li>
+                  <li
+                    data-bs-toggle="modal"
+                    data-bs-target="#deleteReportModal"
+                    (click)="selectReport(report)"
+                  >
+                    {{ "report.delete" | translate }}
+                  </li>
+                </ul>
+              </div>
+            </td>
+          </tr>
+        </ng-template>
+      </p-table>
+    </div>
+  </div>
 </div>
 
 <div class="mobile-bottom"></div>
 
-
 <!-- Save Report Modal -->
-<div class="modal fade" id="saveReportModal" tabindex="-1" aria-labelledby="saveReportModal" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-body">
-            <button
-                type="button"
-                class="btn-close d-none"
-                data-bs-dismiss="modal"
-                aria-label="Close"
-                #closebutton
-            ></button>
-            <app-save-report-modal
-               [report]="selectedReport"
-               (reportToSave)="saveReport($event)"
-            ></app-save-report-modal>
-        </div>
+<div
+  class="modal fade"
+  id="saveReportModal"
+  tabindex="-1"
+  aria-labelledby="saveReportModal"
+  aria-hidden="true"
+>
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-body">
+        <button
+          type="button"
+          class="btn-close d-none"
+          data-bs-dismiss="modal"
+          aria-label="Close"
+          #closebutton
+        ></button>
+        <app-save-report-modal
+          [report]="selectedReport"
+          (reportToSave)="saveReport($event)"
+        ></app-save-report-modal>
       </div>
     </div>
   </div>
+</div>
 
-  <!-- Delete Report Modal -->
-<div class="modal fade" id="deleteReportModal" tabindex="-1" aria-labelledby="deleteReportModal" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">
+<!-- Delete Report Modal -->
+<div
+  class="modal fade"
+  id="deleteReportModal"
+  tabindex="-1"
+  aria-labelledby="deleteReportModal"
+  aria-hidden="true"
+>
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title text-danger text-center">
+          Delete {{ selectedReport?.name }}?
+        </h5>
+        <button
+          #closebutton
+          type="button"
+          class="btn-close"
+          data-bs-dismiss="modal"
+          aria-label="Close"
+        ></button>
+      </div>
 
-        <div class="modal-header">
-            <h5 class="modal-title text-danger text-center">
-                Delete {{ selectedReport?.name }}?
-            </h5>
-            <button #closebutton type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-        </div>
-
-        <div class="modal-body">
-            <button class="btn btn-secondary" data-bs-dismiss="modal" aria-label="Close">Cancel</button>
-            <button
-                class="btn btn-danger float-end"
-                id="deleteReport"
-                (click)="deleteReport(selectedReport?.id)"
-                data-bs-dismiss="modal"
-                aria-label="Close"
-            >
-                Confirm Delete
-            </button>
-        </div>
+      <div class="modal-body">
+        <button
+          class="btn btn-secondary"
+          data-bs-dismiss="modal"
+          aria-label="Close"
+        >
+          Cancel
+        </button>
+        <button
+          class="btn btn-danger float-end"
+          id="deleteReport"
+          (click)="deleteReport(selectedReport?.id)"
+          data-bs-dismiss="modal"
+          aria-label="Close"
+        >
+          Confirm Delete
+        </button>
       </div>
     </div>
   </div>
+</div>
 
-  <app-share-modal></app-share-modal>
-  <app-download-modal></app-download-modal>
+<app-share-modal></app-share-modal>
+<app-download-modal></app-download-modal>
