VQ-2388: fixed sroll issue on entity360 screen

--- a/src/app/features/entities/components/entity/view-entity/entity-basic-info/entity-basic-info.component.html
+++ b/src/app/features/entities/components/entity/view-entity/entity-basic-info/entity-basic-info.component.html
@@ -191,7 +191,7 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h1 class="modal-title fs-5" id="exampleModalLabel">
+        <h1 class="modal-title fs-5">
           {{ "entities.assign_role" | translate }}
         </h1>
         <button
@@ -199,6 +199,7 @@
           class="btn-close"
           data-bs-dismiss="modal"
           aria-label="Close"
+          #closebutton
         ></button>
       </div>
       <div class="modal-body">
