--- a/src/app/features/lms/ind/components/quotation/components/documents-upload/documents-upload.component.html
+++ b/src/app/features/lms/ind/components/quotation/components/documents-upload/documents-upload.component.html
@@ -69,7 +69,7 @@
                           <div class="col-lg-4 col-md-6 col-sm-12">
                             <ng-container *ngIf="document.is_uploaded; else fileUpload">
                               <div class="progress">
-                                <div class="progress-bar bg-success" style="width: 100%;">Completed</div>
+                                <div class="progress-bar bg-success" style="width: 100%;">{{ "lms.ind.quotations.completed" | translate }}</div>
                               </div>
                             </ng-container>
 
@@ -82,7 +82,7 @@
                                 (onUpload)="onBasicUploadAuto($event)"
                                 (onSelect)="uploadFile($event, document.description)"
                                 [auto]="true"
-                                chooseLabel="Choose File"
+                                [chooseLabel]="'lms.ind.quotations.choose_file' | translate"
                                 [showUploadButton]="true"
                                 [showCancelButton]="true"
                                 (onError)="onError()"
@@ -96,11 +96,11 @@
                             <div class="col-lg-2 col-md-12 col-sm-12">
                               <div class="form-check">
                                 <input class="form-check-input" type="checkbox" (change)="handleExempt(document)">
-                                <label class="form-check-label">Exempt</label>
+                                <label class="form-check-label">{{ "lms.ind.quotations.exempt" | translate }}</label>
                               </div>
                               <div class="form-check">
                                 <input class="form-check-input" type="checkbox" (change)="handleUploadLater(document)">
-                                <label class="form-check-label">Upload Later</label>
+                                <label class="form-check-label">{{ "lms.ind.quotations.upload_later" | translate }}</label>
                               </div>
                             </div>
                           </ng-container>
