VQ-3028/Quotations listing UI and API consumption

--- a/src/app/features/lms/components/quotation-list/quotation-list.component.html
+++ b/src/app/features/lms/components/quotation-list/quotation-list.component.html
@@ -10,7 +10,7 @@
 
       <ngx-spinner name="lms_ind_view" type="ball-clip-rotate-multiple" [fullScreen]="false" color="#00529B" size="medium" bdColor = "rgba(255, 255, 255, 0.966)"></ngx-spinner>
 
-        <app-quotation-landing-screen [LMS_IND]="quotationListInd?.rows"></app-quotation-landing-screen>
+        <app-quotation-landing-screen [LMS_IND]="quotationListInd?.rows" [LMS_GRP]="grpQuotationsList"></app-quotation-landing-screen>
       </div>
     </div>
   </div>
