VQ-Fixed the error on premium computation -Normal Quote

--- a/src/app/features/gis/components/quotation/components/quotation-summary/quotation-summary.component.html
+++ b/src/app/features/gis/components/quotation/components/quotation-summary/quotation-summary.component.html
@@ -161,7 +161,7 @@
                                                 <p class="label">Source</p>
                                             </div>
                                             <div class="col-8">
-                                                <p class="content">{{quotationView?.source.description}}</p>
+                                                <p class="content">{{quotationView?.source?.description}}</p>
                                             </div>
                                         </div>
                                     </div>
